--- a/Src/KMWeb/Site.Master
+++ b/Src/KMWeb/Site.Master
@@ -19,15 +19,16 @@
                     Projekat iz predmeta Upravljanje znanjem</h1>
             </div>
             <div class="loginDisplay">
-                <asp:LoginView ID="HeadLoginView" runat="server" EnableViewState="false">
-                    <AnonymousTemplate>
-                        [ <a href="~/Account/Login.aspx" ID="HeadLoginStatus" runat="server">Log In</a> ]
-                    </AnonymousTemplate>
-                    <LoggedInTemplate>
-                        Welcome <span class="bold"><asp:LoginName ID="HeadLoginName" runat="server" /></span>!
-                        [ <asp:LoginStatus ID="HeadLoginStatus" runat="server" LogoutAction="Redirect" LogoutText="Log Out" LogoutPageUrl="~/"/> ]
-                    </LoggedInTemplate>
-                </asp:LoginView>
+            [<a href="~/Account/Login.aspx" ID="HeadLoginStatus" runat="server">Log In</a> ]<asp:LinkButton 
+                    ID="linkLogOut" runat="server" onclick="linkLogOut_Click" Visible="False">LogOut</asp:LinkButton>
+                <br />
+                        <asp:Label ID="lblUserIme" runat="server" Text="-"></asp:Label>
+                        <asp:Label ID="lblUserPrezime" runat="server" Text="-"></asp:Label>
+                        
+                  
+                    
+                   
+               
             </div>
             <div class="clear hideSkiplink">
                 <asp:Menu ID="NavigationMenu" runat="server" CssClass="menu" EnableViewState="false" IncludeStyleBlock="false" Orientation="Horizontal">
